# CPython27X

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cpython/: CMakeLists.txt  releaseGen.sh
cpython/Grammar/: Grammar
cpython/Include/: Python-ast.h  PythonX.h  graminit.h  token.h
cpython/Lib/: _sysconfigdata.py  platform.py  symbol.py  token.py
cpython/Modules/: parsermodule.c  posixmodule.c
cpython/PCbuild/: pcbuild.sln  pythoncore.vcxproj
cpython/Parser/: parsetok.c  tokenizer.c
cpython/Python/: Python-ast.c  ast.c  compile.c  dynload_win.c  graminit.c  symtable.c
modified/: .gitignore  generate_modified_files.py
python27x/: CMakeLists.txt  main.cpp  patch.cpp  patch.h
tests/: astTest.py  test.py  test2.py  test3.py  test4.py  test5.py
